--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.2",
+    "babel-preset-react-app": "^7.0.0",
+    "foundation-sites": "^6.5.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-foundation": "^0.9.6",
     "react-scripts": "3.1.1"
   },
   "scripts": {
