--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.2",
-    "babel-preset-react-app": "^7.0.0",
     "foundation-sites": "^6.5.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-foundation": "^0.9.6",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-twitch-embed-video": "^1.1.1",
+    "react-twitter-embed": "^2.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
