--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-foundation": "^0.9.6",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-twitch-embed-video": "^1.1.1",
     "react-twitter-embed": "^2.0.8"
