--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-devicon": "^0.1.9",
     "react-dom": "^16.9.0",
     "react-foundation": "^0.9.6",
+    "react-items-carousel": "^2.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
