--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.2",
+    "axios": "^0.19.0",
     "devicon": "^2.2.0",
     "foundation-sites": "^6.5.3",
     "react": "^16.9.0",
@@ -14,6 +15,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
+    "react-star-ratings": "^2.3.0",
     "react-twitch-embed-video": "^1.1.1",
     "react-twitter-embed": "^2.0.8"
   },
