--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.23.2",
     "axios": "^0.19.0",
+    "datejs": "^1.0.0-rc3",
     "devicon": "^2.2.0",
     "foundation-sites": "^6.5.3",
     "react": "^16.9.0",
@@ -14,7 +15,7 @@
     "react-items-carousel": "^2.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.4.0",
     "react-star-ratings": "^2.3.0",
     "react-twitch-embed-video": "^1.1.1",
     "react-twitter-embed": "^2.0.8"
