--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "antd": "^3.23.2",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
     "datejs": "^1.0.0-rc3",
     "devicon": "^2.2.0",
     "foundation-sites": "^6.5.3",
     "react": "^16.9.0",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^2.9.0",
     "react-devicon": "^0.1.9",
     "react-dom": "^16.9.0",
     "react-foundation": "^0.9.6",
@@ -17,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-star-ratings": "^2.3.0",
+    "react-table": "^6.8.6",
     "react-twitch-embed-video": "^1.1.1",
     "react-twitter-embed": "^2.0.8"
   },
