--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "antd": "^3.23.2",
     "axios": "^0.19.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "datejs": "^1.0.0-rc3",
     "devicon": "^2.2.0",
     "foundation-sites": "^6.5.3",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.1",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.9.0",
     "react-devicon": "^0.1.9",
