--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cecil",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://ec2-52-53-158-205.us-west-1.compute.amazonaws.com:3001",
+  "proxy": "https://ec2-52-53-158-205.us-west-1.compute.amazonaws.com:3001",
   "dependencies": {
     "antd": "^3.23.2",
     "axios": "^0.19.0",
