--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "name": "cecil",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://ec2-52-53-158-205.us-west-1.compute.amazonaws.com:3001",
+  "proxy": "https://6f4jesporh.execute-api.us-west-2.amazonaws.com/",
   "dependencies": {
-    "antd": "^3.23.2",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.5.0",
-    "chart.js": "^2.9.3",
+    "antd": "^3.26.20",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "datejs": "^1.0.0-rc3",
-    "devicon": "^2.2.0",
-    "foundation-sites": "^6.5.3",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.1",
+    "devicon": "^2.10.1",
+    "foundation-sites": "^6.6.3",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.5.0",
     "react-chartjs": "^1.2.0",
-    "react-chartjs-2": "^2.9.0",
+    "react-chartjs-2": "^2.11.1",
     "react-devicon": "^0.1.9",
-    "react-dom": "^16.9.0",
-    "react-foundation": "^0.9.6",
+    "react-dom": "^16.14.0",
+    "react-foundation": "^0.9.7",
     "react-items-carousel": "^2.8.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
     "react-star-ratings": "^2.3.0",
-    "react-table": "^6.8.6",
-    "react-twitch-embed-video": "^1.1.1",
+    "react-table": "^6.11.5",
+    "react-twitch-embed-video": "^1.1.4",
     "react-twitter-embed": "^2.0.8"
   },
   "scripts": {
