finished marathon calculator

--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
   "proxy": "https://6f4jesporh.execute-api.us-west-2.amazonaws.com/",
   "dependencies": {
     "antd": "^3.26.20",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "datejs": "^1.0.0-rc3",
-    "devicon": "^2.10.1",
-    "foundation-sites": "^6.6.3",
+    "devicon": "^2.14.0",
+    "foundation-sites": "^6.7.2",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.5.0",
+    "react-bootstrap": "^1.6.3",
     "react-chartjs": "^1.2.0",
-    "react-chartjs-2": "^2.11.1",
+    "react-chartjs-2": "^2.11.2",
     "react-devicon": "^0.1.9",
     "react-dom": "^16.14.0",
     "react-foundation": "^0.9.7",
     "react-items-carousel": "^2.8.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
     "react-star-ratings": "^2.3.0",
     "react-table": "^6.11.5",
     "react-twitch-embed-video": "^1.1.4",
-    "react-twitter-embed": "^2.0.8"
+    "react-twitter-embed": "^2.0.8",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
